--- a/style/summary_login/summary.css
+++ b/style/summary_login/summary.css
@@ -27,11 +27,13 @@
     flex-direction: column;
     gap: 20px;
     flex-shrink: 0;
+    max-width: fit-content;
 }
 
 .summary-row {
     display: flex;
-    gap: 32px;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .summary-card,
@@ -81,17 +83,14 @@
     padding: 20px 12px;
 }
 
-.todo-icon {
+.summary-icon {
     width: 69px;
     height: 69px;
 }
 
-.todo-info {
-    width: 63px;
-    height: 101px;
+.summary-info {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .todo-number {
@@ -116,11 +115,6 @@
     opacity: 1;
 }
 
-.done-icon {
-    width: 69px;
-    height: 69px;
-}
-
 .done-info {
     width: 63px;
     height: 101px;
@@ -130,7 +124,7 @@
     justify-content: center;
 }
 
-.done-number {
+.summary-number{
     font-family: Inter, sans-serif;
     font-weight: 600;
     font-size: 64px;
@@ -185,25 +179,6 @@
     height: 69px;
 }
 
-.urgent-info {
-    width: 52px;
-    height: 96px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.urgent-number {
-    width: 50px;
-    height: 77px;
-    font-family: Inter, sans-serif;
-    font-weight: 600;
-    font-size: 64px;
-    line-height: 120%;
-    text-align: center;
-}
-
 .urgent-label {
     width: 52px;
     height: 19px;
@@ -253,52 +228,12 @@
     gap: 32px;
 }
 
-.board-info {
-    width: 83px;
-    height: 125px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 13px;
-}
-
-.board-number {
-    width: 41px;
-    height: 77px;
-    font-family: Inter, sans-serif;
-    font-weight: 600;
-    font-size: 64px;
-    line-height: 120%;
-    text-align: center;
-}
-
 .board-label {
     width: 83px;
     height: 48px;
     font-family: Inter, sans-serif;
     font-weight: 400;
     font-size: 20px;
-    line-height: 120%;
-    text-align: center;
-}
-
-.progress-info {
-    width: 86px;
-    height: 127px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 13px;
-}
-
-.progress-number {
-    width: 40px;
-    height: 77px;
-    font-family: Inter, sans-serif;
-    font-weight: 600;
-    font-size: 64px;
     line-height: 120%;
     text-align: center;
 }
@@ -318,26 +253,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.feedback-info {
-    width: 93px;
-    height: 125px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 13px;
-}
-
-.feedback-number {
-    width: 40px;
-    height: 77px;
-    font-family: Inter, sans-serif;
-    font-weight: 600;
-    font-size: 64px;
-    line-height: 120%;
-    text-align: center;
 }
 
 .feedback-label {
