--- a/style/summary_login/summary.css
+++ b/style/summary_login/summary.css
@@ -18,7 +18,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-
     margin-top: 190px;
 }
 
@@ -28,12 +27,14 @@
     gap: 20px;
     flex-shrink: 0;
     max-width: fit-content;
+    min-width: 630px;
 }
 
 .summary-row {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 12px;
 }
 
 .summary-card,
@@ -72,11 +73,15 @@
 }
 
 .summary-cards-first-row{
-    width: 264px;
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 18px;
+}
+
+.summary-card-second-row{
+    width: 100%;
 }
 
 .padding-all-cards{
@@ -147,7 +152,6 @@
 }
 
 .urgent-card {
-    width: 560px;
     display: flex;
     align-items: center;
     gap: 61px;
@@ -222,10 +226,6 @@
     font-size: 16px;
     line-height: 120%;
     opacity: 0.8;
-}
-
-.summary-row-stats {
-    gap: 32px;
 }
 
 .board-label {
