--- a/style/summary_login/summary.css
+++ b/style/summary_login/summary.css
@@ -99,7 +99,6 @@
 }
 
 .todo-number {
-    font-family: Inter, sans-serif;
     font-weight: 600;
     font-size: 64px;
     line-height: 120%;
@@ -125,7 +124,6 @@
 }
 
 .summary-number{
-    font-family: Inter, sans-serif;
     font-weight: 600;
     font-size: 64px;
     line-height: 120%;
@@ -138,7 +136,7 @@
 .urgent-card {
     display: flex;
     align-items: center;
-    gap: 61px;
+    
 }
 
 .urgent-left {
@@ -171,7 +169,8 @@
     width: 0;
     height: 102px;
     border-left: 2px solid #d1d1d1;
-    border-radius: 100px;
+    border-radius: 20px;
+    margin: 0px 61px;
 }
 
 .urgent-right {
@@ -186,7 +185,6 @@
     width: 178px;
     height: 25px;
     white-space: nowrap;
-    font-family: Inter, sans-serif;
     font-weight: 700;
     font-size: 21px;
     line-height: 120%;
@@ -195,7 +193,6 @@
 .urgent-deadline {
     width: 148px;
     height: 19px;
-    font-family: Inter, sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 120%;
