--- a/style/summary_login/summary.css
+++ b/style/summary_login/summary.css
@@ -37,9 +37,7 @@
     gap: 30px;
 }
 
-.summary-card,
-.urgent-card,
-.summary-stat-card {
+.card-shadow {
     background: #ffffff;
     border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
@@ -81,7 +79,8 @@
 }
 
 .summary-card-second-row{
-    width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .padding-all-cards{
@@ -131,12 +130,6 @@
     height: 77px;
     width: 31px;
     margin: 0 auto;
-}
-
-.urgent-card {
-    display: flex;
-    align-items: center;
-    
 }
 
 .urgent-left {
