--- a/style/summary_login/summary.css
+++ b/style/summary_login/summary.css
@@ -81,6 +81,8 @@
 .summary-card-second-row{
     display: flex;
     align-items: center;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .padding-all-cards{
@@ -151,7 +153,6 @@
     height: 102px;
     border-left: 2px solid #d1d1d1;
     border-radius: 20px;
-    margin: 0px 50px;
 }
 
 .urgent-right {
