--- a/style/summary_login/signup.css
+++ b/style/summary_login/signup.css
@@ -81,128 +81,14 @@
     margin-top: 0;
 }
 
-@media (max-width: 1100px) {
-    .login-card {
-        max-width: 600px;
-    }
-}
-
-@media (max-width: 1000px) {
-    .login-card {
-        max-width: 550px;
-    }
-}
-
-@media (max-width: 900px) {
-    .login-card {
-        max-width: 400px;
-    }
-}
-
-@media (max-width: 768px) {
-    .login-wrapper {
-        justify-content: flex-start;
-        align-items: center;
-        padding: 24px 16px 32px;
-    }
-
-    .login-logo-section {
-        position: static;
-        align-self: flex-start;
-        margin-left: 12px;
-        margin-bottom: 16px;
-    }
-
-    .login-logo {
-        width: 72px;
-    }
-
-    .login-card {
-        position: relative;          
-        width: 100%;
-        max-width: 380px;
-        padding: 32px 16px;
-        margin-top: 40px;
-    }
-
-    .back-arrow {
-        top: 55px;
-        left: 30px;
-    }
-}
-
-
-@media (max-width: 500px) {
-    .login-card {
-        padding: 28px 16px;
-    }
-    
-    .login-title {
-        font-size: 47px;
-    }
-    
-    .back-arrow {
-        top: 42px;
-        left: 45px;
-    }
-
-    .privacy-check {
-        font-size: 14px;
-        text-align: left;
-    }
-}
-
-@media (max-width: 420px) {
-    
-    .signup-button-primary {
-        width: 100%;
-        font-size: 16px;
-    }
-    
-    .privacy-check {
-        font-size: 13px;
-    }
-}
-
-@media (max-width: 400px) {
-    .login-card {
-        padding: 24px 12px;
-    }
-
-    .login-title {
-        font-size: 43px;
-    }
-    
-    .login-footer {
-        margin-top: 40px;
-        padding-bottom: 32px;
-        display: flex;
-        justify-content: center;
-        gap: 16px;
-        flex-wrap: wrap;
-    }
-    .back-arrow {
-        top: 35px;
-        left: 20px;
-    }
-}
-
-@media (min-width: 900px) and (max-width: 1100px) and (max-height: 650px) {
-    .login-card {
-        margin-top: 150px;  
-    }
-
-    .back-arrow {
-        top: 60px;         
-        left: 40px;        
-    }
-}
-    .signup-toast {
+.signup-toast {
     position: fixed;
-    top: 70px;                  /* Höhe wie im Join-Original */
+    top: 70px;
+    /* Höhe wie im Join-Original */
     left: 50%;
     transform: translateX(-50%);
-    background-color: #2A3647;  /* Dunkelblau */
+    background-color: #2A3647;
+    /* Dunkelblau */
     color: white;
     padding: 12px 22px;
     border-radius: 20px;
