fix: removed empty code lines - adjusted css

--- a/style/summary_login/signup.css
+++ b/style/summary_login/signup.css
@@ -42,8 +42,8 @@
     transform: translateY(-50%);
 }
 
-.login-card {
-    margin-top: 180px;
+.signup-card {
+    margin-top: 100px;
 }
 
 .login-button-primary {
