--- a/style/summary_login/summary.css
+++ b/style/summary_login/summary.css
@@ -73,6 +73,7 @@
     align-items: center;
     justify-content: center;
     gap: 18px;
+    cursor: pointer;
 }
 
 .summary-card-second-row{
@@ -80,6 +81,7 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-around;
+    cursor: pointer;
 }
 
 .padding-all-cards{
@@ -174,6 +176,7 @@
     justify-content: center;
     align-items: center;
     padding: 20px 20px;
+    cursor: pointer;
 }
 
 .greeting-text {
