--- a/style/summary_login/summary.css
+++ b/style/summary_login/summary.css
@@ -21,10 +21,9 @@
 .summary-cards-wrapper {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     flex-shrink: 0;
-    max-width: fit-content;
-    min-width: 630px;
+    max-width: 550px;
 }
 
 .summary-row {
@@ -74,6 +73,7 @@
     justify-content: center;
     gap: 18px;
     cursor: pointer;
+    margin: 10px 10px;
 }
 
 .summary-card-second-row {
@@ -82,6 +82,31 @@
     flex-direction: row;
     justify-content: space-around;
     cursor: pointer;
+    margin: 10px 10px;
+}
+
+.summary-card-second-row:hover {
+    color: white;
+    background-color: #2A3647;
+    padding: 30px 30px;
+    margin: 0px 0px;
+}
+
+.summary-cards-last-row {
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 20px;
+    cursor: pointer;
+    margin: 10px 10px;
+}
+
+.summary-cards-last-row:hover {
+    color: white;
+    background-color: #2A3647;
+    padding: 30px 30px;
+    margin: 0px 0px;
 }
 
 .padding-all-cards {
@@ -167,22 +192,6 @@
 .urgent-deadline {
     font-weight: 400;
     font-size: 16px;
-    color: #2A3647;
-}
-
-.summary-cards-last-row {
-    width: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 20px;
-    cursor: pointer;
-}
-
-.summary-cards-last-row:hover {
-    color: white;
-    background-color: #2A3647;
-    padding: 25px 25px;
 }
 
 .greeting-text {
