--- a/style/summary_login/summary_responsive.css
+++ b/style/summary_login/summary_responsive.css
@@ -1,8 +1,4 @@
 @media (max-width: 1400px) {
-    .main-content {
-        padding: 0px 40px;
-    }
-
     .summary-title {
         font-size: 50px;
     }
@@ -12,7 +8,7 @@
     }
 
     .summary-content-layout {
-        gap: 80px;
+        gap: 3%;
     }
 
     .greeting-text {
@@ -25,24 +21,6 @@
 
     .summary-greeting-section {
         margin-top: 150px;
-    }
-
-    .todo-card,
-    .done-card {
-        width: 230px;
-        height: 150px;
-    }
-
-    .urgent-card {
-        width: 480px;
-        height: 150px;
-    }
-
-    .board-card,
-    .progress-card,
-    .feedback-card {
-        width: 150px;
-        height: 150px;
     }
 }
 
@@ -59,10 +37,6 @@
         font-size: 18px;
     }
 
-    .summary-content-layout {
-        gap: 50px;
-    }
-
     .greeting-text {
         font-size: 34px;
     }
@@ -74,60 +48,17 @@
     .summary-greeting-section {
         margin-top: 120px;
     }
+}
 
-    /* Cards noch kompakter */
-    .todo-card,
-    .done-card {
-        width: 200px;
-        height: 130px;
-        padding: 20px 15px;
+@media (max-width: 1150px) {
+    .main-content {
+        padding: 0px 15px;
     }
 
-    .todo-icon,
-    .done-icon {
-        width: 55px;
-        height: 55px;
+    .summary-padding-top {
+        padding-top: 60px;
     }
 
-    .todo-number,
-    .done-number {
-        font-size: 52px;
-    }
-
-    .urgent-card {
-        width: 420px;
-        height: 130px;
-        padding: 20px 32px;
-        gap: 40px;
-    }
-
-    .urgent-icon {
-        width: 55px;
-        height: 55px;
-    }
-
-    .urgent-number {
-        font-size: 52px;
-    }
-
-    .board-card,
-    .progress-card,
-    .feedback-card {
-        width: 130px;
-        height: 130px;
-    }
-
-    .board-number,
-    .progress-number,
-    .feedback-number {
-        font-size: 52px;
-    }
-
-    .board-label,
-    .progress-label,
-    .feedback-label {
-        font-size: 18px;
-    }
 }
 
 @media (max-width: 1025px) {
@@ -136,10 +67,14 @@
     }
 }
 
-@media (max-width: 767px) {
-    .logo-responsive {
-        display: block;
-        height: 56px;
+@media (max-width: 800px) {
+     .summary-cards-wrapper {
+        max-width: 490px;
     }
 }
 
+@media (max-width: 767px) {
+    .summary-padding-top {
+        padding-top: 60px;
+    }
+}
