fix: adjusted mainframe css to hide  help icon when in responsiv

--- a/style/mainframe_responsive.css
+++ b/style/mainframe_responsive.css
@@ -3,6 +3,10 @@
         display: none;
     }
 
+    .hide-in-resp{
+        display: none;
+    }
+
     .header-nav {
         justify-content: space-between;
     }
