--- a/style/summary_login/signup.css
+++ b/style/summary_login/signup.css
@@ -1,13 +1,34 @@
 .signup-button-primary {
-    max-width: 140px;
+    max-width: 180px;
     display: block;
     margin: 0 auto;
+    background-color: #2A3647;
+    color: #FFFFFF;
+    border: none;
+    outline: none;
+    height: 48px;
+    border-radius: 8px;
+    font-family: Inter, sans-serif;
+    font-size: 21px;
+    font-weight: 700;
+    padding: 0 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
 
-.signup-button-primary:disabled {
-    background-color: #A8A8A8;
-    cursor: not-allowed;
+.signup-button-primary:not(:disabled):hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+button.signup-button-primary:disabled {
+    background-color: #D1D1D1;
+    color: #FFFFFF;
     box-shadow: none;
+}
+
+.login-buttons {
+    margin-top: 0;
 }
 
 .back-arrow {
@@ -43,11 +64,7 @@
 }
 
 .signup-card {
-    margin-top: 180px;
-}
-
-.login-button-primary {
-    padding: 12px 18px;
+    margin-top: 120px;
 }
 
 .privacy-check {
@@ -74,11 +91,6 @@
 
 .privacy-check a:hover {
     text-decoration: underline;
-}
-
-.login-buttons {
-    width: 100%;
-    margin-top: 0;
 }
 
 .signup-toast {
