--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -44,6 +44,11 @@
 }
 
 @media (max-width: 768px) {
+
+    body {
+        overflow: hidden;
+    }
+
     .login-wrapper {
         justify-content: flex-start;
         align-items: center;
@@ -74,9 +79,12 @@
         position: static;
         width: 100%;
         max-width: 380px;
-        padding: 32px 12px;
         margin-top: 24px;
         order: 1;
+    }
+
+    .login-footer {
+        margin-top: 140px;
     }
 }
 
