--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -52,13 +52,13 @@
     .login-wrapper {
         justify-content: flex-start;
         align-items: center;
-        padding: 24px 16px 32px;
     }
 
     .login-logo-section {
         position: static;
         align-self: flex-start;
-        margin-left: 12px;
+        margin-left: 24px;
+        margin-top: 24px;
         margin-bottom: 16px;
     }
 
@@ -78,7 +78,7 @@
     .login-card {
         position: static;
         width: 100%;
-        max-width: 380px;
+        max-width: 450px;
         margin-top: 24px;
         order: 1;
     }
@@ -90,14 +90,19 @@
 
 @media (max-width: 700px) {
     .login-card {
-        max-width: 500px;
+        max-width: 400px;
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .login-card {
         max-width: 380px;
-        padding: 32px 20px;
+    }
+}
+
+@media (max-width: 530px) {
+    .login-card {
+        max-width: 350px;
     }
 }
 
