--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -117,6 +117,10 @@
         flex-direction: column;
         gap: 12px;
     }
+    
+    .login-logo {
+        width: 60px;
+    }
 
     .login-title {
         font-size: 43px;
@@ -154,6 +158,15 @@
     .login-card {
         max-width: 240px;
     }
+
+    .login-buttons button{
+        font-size: 18px;
+    }
+
+    .login-logo {
+        width: 50px;
+    }
+
 }
 
 @media (min-width: 900px) and (max-width: 1100px) and (max-height: 700px) {
