--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -138,7 +138,7 @@
 
 .input-icon {
     position: absolute;
-    right: 9px;
+    right: 0;
     top: 50%;
     transform: translateY(-50%);
     width: 20px;
