style: fix sizing of logo and login,guest button font

--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -114,6 +114,10 @@
         flex-direction: column;
         gap: 12px;
     }
+    
+    .login-logo {
+        width: 60px;
+    }
 
     .login-footer {
         margin-top: 60px;
