create additional classes to adapt an add task page layout

--- a/style/add_task.css
+++ b/style/add_task.css
@@ -524,3 +524,12 @@ textarea.task-input {
     background-color: #3a4555 !important;
     color: white !important;
 }
+
+.order-middle{
+    display: flex;
+    justify-content: center;
+}
+
+.add-task-toast-adaption {
+    margin-top: 40vh;
+}
