--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -1,18 +1,21 @@
-@media (max-width: 1100px) {
+@media (max-width: 1150px) {
     .login-card {
         max-width: 600px;
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1050px) {
     .login-card {
-        max-width: 550px;
+        max-width: 500px;
     }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 950px) {
     .login-card {
         max-width: 400px;
+    }
+    .login-logo {
+        width: 80px;
     }
 }
 
@@ -34,23 +37,22 @@
         padding: 24px 16px 32px;
     }
 
-    .login-logo-section {
-        position: static;
-        align-self: flex-start;
-        margin-left: 12px;
-        margin-bottom: 16px;
-    }
-
     .login-logo {
         width: 72px;
     }
 
+    .login-logo-section {
+        position: static;
+        align-self: flex-start;
+        margin-left: 8px;
+        margin-top: 0;
+        margin-bottom: 16px;
+    }
+
     .login-card {
-        position: relative;
         width: 100%;
         max-width: 380px;
         padding: 32px 16px;
-        margin-top: 40px;
     }
 
     .back-arrow {
