--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -93,6 +93,10 @@
     .login-logo {
         width: 60px;
     }
+    .back-arrow.back-arrow {
+        top: 195px;
+        left: 60px;
+    }
 }
 
 @media (max-width: 420px) {
@@ -124,15 +128,17 @@
         gap: 16px;
         flex-wrap: wrap;
     }
-    .back-arrow {
-        top: 35px;
-        left: 20px;
-    }
+    
 }
 
 @media (max-width: 365px) {
     .login-logo {
         width: 50px;
+    }
+
+    .back-arrow.back-arrow {
+        top: 180px;
+        left: 50px;
     }
 
 }
@@ -142,7 +148,7 @@
         max-width: 250px;
     }
     .back-arrow.back-arrow {
-        top: 205px;
+        top: 180px;
         left: 40px;
     }
 }
