--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -117,6 +117,10 @@
         flex-direction: column;
         gap: 12px;
     }
+
+    .login-title {
+        font-size: 43px;
+    }
     
     .login-logo {
         width: 60px;
