--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -100,6 +100,9 @@
     .login-card {
         max-width: 310px;
     }
+    .login-title {
+        font-size: 47px;
+    }
 }
 
 @media (max-width: 450px) {
@@ -111,6 +114,10 @@
      .login-buttons {
         flex-direction: column;
         gap: 12px;
+    }
+
+    .login-title {
+        font-size: 43px;
     }
     
     .login-logo {
