--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -152,3 +152,13 @@
         left: 40px;
     }
 }
+
+@media (min-width: 1260px) and (max-width: 1300px) and (min-height: 780px) and (max-height: 820px) {
+    .signup-card.signup-card {
+        padding: 32px 48px 32px 48px;
+        margin-top: 100px;
+    }
+    .login-footer {
+        margin-top: 20px
+    }
+}
