--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -129,6 +129,9 @@
         flex-wrap: wrap;
     }
     
+    .input-error.input-error {
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 365px) {
