--- a/style/board_style.css
+++ b/style/board_style.css
@@ -309,3 +309,10 @@ h1{
     opacity: 1;
     transform: translateY(0);
 }
+
+.repsonsive_add_task_button {
+    border-radius: 20%;
+    background-color: #2A3647;
+    border: none;
+    aspect-ratio: 1;
+}
