--- a/style/board_style.css
+++ b/style/board_style.css
@@ -328,3 +328,17 @@ h1 {
 .required-field-section-responsive {
     display: none;
 }
+
+.repsonsive_add_task_button {
+    border-radius: 20%;
+    background-color: #2A3647;
+    border: none;
+    aspect-ratio: 1;
+}
+
+.repsonsive_add_task_button {
+    border-radius: 20%;
+    background-color: #2A3647;
+    border: none;
+    aspect-ratio: 1;
+}
