--- a/style/board_style.css
+++ b/style/board_style.css
@@ -311,3 +311,10 @@ h1{
     transform: translateY(0);
     pointer-events: auto;
 }
+
+.repsonsive_add_task_button {
+    border-radius: 20%;
+    background-color: #2A3647;
+    border: none;
+    aspect-ratio: 1;
+}
