added hover effects to button

--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -20,4 +20,14 @@
         width: 28px;
         padding: 10px;
     }
+
+    .h1_section {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .board_controls {
+        margin-right: 0px;
+    }
 }
