--- a/style/board_style.css
+++ b/style/board_style.css
@@ -316,3 +316,8 @@ h1{
     border: none;
     aspect-ratio: 1;
 }
+
+.repsonsive_add_task_button:hover {
+    background-color: #29ABE2;
+    cursor: pointer;
+}
