--- a/style/board_style.css
+++ b/style/board_style.css
@@ -312,6 +312,14 @@ h1 {
     pointer-events: auto;
 }
 
+.repsonsive_add_task_button {
+    display: none;
+    border-radius: 20%;
+    background-color: #2A3647;
+    border: none;
+    aspect-ratio: 1;
+}
+
 .repsonsive_add_task_button:hover {
     background-color: #29ABE2;
     cursor: pointer;
