--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -63,7 +63,6 @@
     .responsive_add_task_button {
         display: block;
     }
-
 }
 
 @media (min-width: 767px) {
@@ -107,5 +106,11 @@
 @media (max-width: 500px) {
     .main-content {
         padding: 16px 24px;
+    }
+}
+
+@media (max-width: 767px) {
+    .header-nav {
+        padding-left: 48px;
     }
 }
