show tasks next to each under

--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -11,7 +11,7 @@
         flex: 1;
     }
 
-    .search_task input{
+    .search_task input {
         flex: 1;
     }
 
@@ -39,5 +39,20 @@
 @media (max-width: 767px) {
     .header-nav {
         padding-left: 48px;
+    }
+
+    .board_table {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .column_content {
+        display: flex;
+        flex-direction: row;
+        overflow-x: auto !important;
+    }
+
+    .board_column {
+        width: 100%;
     }
 }
