--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -113,4 +113,19 @@
     .header-nav {
         padding-left: 48px;
     }
+    
+    .board_table {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .column_content {
+        display: flex;
+        flex-direction: row;
+        overflow-x: auto !important;
+    }
+
+    .board_column {
+        width: 100%;
+    }
 }
