added with limit to tasks

--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -123,9 +123,15 @@
         display: flex;
         flex-direction: row;
         overflow-x: auto !important;
+        gap: 16px;
     }
 
     .board_column {
         width: 100%;
+    }
+
+    .single_task_content {
+        min-width: 200px;
+        max-width: 220px;
     }
 }
