add task overlay bigger on smaller screens

--- a/style/board_overlay_responsive.css
+++ b/style/board_overlay_responsive.css
@@ -9,6 +9,8 @@
     }
 }
 
-@media (max-width: 600px) {
-    
+@media (max-width: 650px) {
+    .overlay_content.add_task_attributes {
+        width: 95%;
+    }
 }
