set inter_bold as h1 font

--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -76,7 +76,7 @@
 }
 
 .login-title {
-    font-family: Inter, sans-serif;
+    font-family: Inter_bold, sans-serif;
     font-size: 61px;
     font-weight: 700;
     line-height: 120%;
