style: changed copilot comments

--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -110,7 +110,7 @@
 @media (max-width: 450px) {
     .login-card {
         max-width: 280px;
-        padding: 48px 28px 48px 28px;
+        padding: 48px 28px;
         }
 
      .login-buttons {
@@ -156,21 +156,6 @@
         max-width: 240px;
     }
     
-}
-
-@media (max-width: 365px) {
-    .login-card {
-        max-width: 240px;
-    }
-
-    .login-buttons button{
-        font-size: 18px;
-    }
-
-    .login-logo {
-        width: 50px;
-    }
-
 }
 
 @media (min-width: 900px) and (max-width: 1100px) and (max-height: 700px) {
