--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -108,7 +108,7 @@
 .input-wrapper {
     position: relative;
     width: 100%;
-    transform: translate(-12px);
+    margin-left: -12px;
     padding: 0 4px;
 
 }
@@ -116,7 +116,7 @@
 .login-input {
     width: 100%;
     height: 40px;
-    padding: 4px 0px 4px 21px;
+    padding: 4px 0 4px 21px;
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     font-family: Inter, sans-serif;
