--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -19,13 +19,6 @@
     }
 }
 
-@media (min-width: 900px) and (max-width: 1100px) and (max-height: 650px) {
-    .login-card {
-        margin-top: 150px;  
-    }
-
-}
-
 @media (max-width: 768px) {
 
     .login-card {
@@ -67,7 +60,7 @@
 @media (max-width: 500px) {
     .login-card {
         max-width: 320px;
-        padding: 28px 28px;
+        padding: 28px;
     }
 
     .login-title {
@@ -93,7 +86,7 @@
 
 @media (max-width: 400px) {
     .login-card {
-        padding: 24px 24px;
+        padding: 24px;
         max-width: 280px;
     }
 
@@ -139,9 +132,9 @@
 
 @media (min-width: 1260px) and (max-width: 1300px) and (min-height: 780px) and (max-height: 820px) {
     .signup-card.signup-card {
-        padding: 32px 48px 32px 48px;
+        padding: 32px 48px;
     }
     .login-footer {
-        margin-top: 20px
+        margin-top: 20px;
     }
 }
