--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -102,7 +102,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    gap: 16px;
+}
+
+.lock::after {
+    content: "";
+    min-width: 24px;
+    width: 24px;
+    background: url(../../assets/icons/login/lock.svg) center / contain no-repeat;
 }
 
 .input-wrapper {
