--- a/style/board_overlay_responsive.css
+++ b/style/board_overlay_responsive.css
@@ -70,3 +70,17 @@
         font-size: 32px;
     }
 }
+
+@media (max-width: 500px) {
+    #overlay_title {
+        font-size: 48px;
+    }
+
+    .priority-button {
+        padding: 10px 5px;
+    }
+
+    .priority-section {
+        padding: 8px;
+    }
+}
