--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -164,9 +164,16 @@
     }
 }
 
-@media (min-width: 480px) and (max-width: 600px) and (min-height: 650px) and (max-height: 800px) {
+@media (min-width: 480px) and (max-width: 600px) and (min-height: 600px) and (max-height: 800px) {
     .login-footer {
         margin-top: 56px;
         padding-bottom: 40px;
+    }
+}
+
+@media (max-height: 800px) {
+    .login-card {
+        margin-top: calc(50vh - 240px - 60px);
+        padding: 32px 16px;
     }
 }
