--- a/style/board_overlay_responsive.css
+++ b/style/board_overlay_responsive.css
@@ -15,6 +15,10 @@
     .action-button-section {
         justify-content: flex-end;
     }
+
+    .required-field-section-responsive {
+        display: flex;
+    }
 }
 
 @media (max-width: 650px) {
