changed size of edit overlay and h1

--- a/style/board_overlay_responsive.css
+++ b/style/board_overlay_responsive.css
@@ -25,6 +25,14 @@
     .overlay_content.add_task_attributes {
         width: 95%;
     }
+
+    .overlay_content {
+        width: 95%;
+    }
+
+    .overlay_main_content h1 {
+        font-size: 44px;
+    }
 }
 
 @media (max-width: 500px) {
