--- a/style/summary_login/signup.css
+++ b/style/summary_login/signup.css
@@ -1,4 +1,5 @@
 .signup-card {
+    position: relative;
     gap: 16px;
     margin-top: 120px;
 }
@@ -52,8 +53,8 @@ button.signup-button-primary:disabled {
 
 .back-arrow {
     position: absolute;
-    top: 70px;
-    left: 50px;
+    top: 64px;
+    left: 48px;
     width: 32px;
     height: 32px;
     cursor: pointer;
@@ -72,29 +73,6 @@ button.signup-button-primary:disabled {
     background-color: #D1D1D1;
     transform: scale(1.1);
 }
-
-/* .back-arrow::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 4px;
-    width: 12px;
-    height: 12px;
-    border-left: 3px solid #29ABE2;
-    border-bottom: 3px solid #29ABE2;
-    transform: translateY(-50%) rotate(45deg);
-}
-
-.back-arrow::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 4px;
-    width: 22px;
-    height: 0;
-    border-top: 3px solid #29ABE2;
-    transform: translateY(-50%);
-} */
 
 .privacy-check {
     align-self: center;
