update style in login container without position: absolut. new order and class for footer.

--- a/style/summary_login/login_responsive.css
+++ b/style/summary_login/login_responsive.css
@@ -27,7 +27,6 @@
 
     .login-footer {
         position: static;
-        margin-top: auto;
         padding-bottom: 24px;
         display: flex;
         justify-content: center;
@@ -76,7 +75,7 @@
     .login-card {
         position: static;
         width: 100%;
-        max-width: 450px;
+        /* max-width: 450px; */
         margin-top: calc(50vh - 240px - 130px);
         order: 1;
     }
@@ -88,19 +87,19 @@
 
 @media (max-width: 700px) {
     .login-card {
-        max-width: 400px;
+        /* max-width: 400px; */
     }
 }
 
 @media (max-width: 600px) {
     .login-card {
-        max-width: 380px;
+        /* max-width: 380px; */
     }
 }
 
 @media (max-width: 530px) {
     .login-card {
-        max-width: 310px;
+        /* max-width: 310px; */
     }
 
     .login-title {
@@ -110,7 +109,7 @@
 
 @media (max-width: 450px) {
     .login-card {
-        max-width: 280px;
+        /* max-width: 280px; */
         padding: 48px 28px;
     }
 
@@ -154,7 +153,7 @@
 
 @media (max-width: 365px) {
     .login-card {
-        max-width: 240px;
+        /* max-width: 240px; */
     }
     
 }
@@ -175,7 +174,7 @@
 
 @media (max-height: 800px) {
     .login-card {
-        margin-top: calc(50vh - 240px - 60px);
-        padding: 32px 16px;
+        /* margin-top: calc(50vh - 240px - 60px); */
+        /* padding: 32px 16px; */
     }
 }
