--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -9,7 +9,6 @@
 }
 
 .login-logo-section {
-    position: relative;
     width: 100%;
     max-width: 1440px;
     display: flex;
@@ -23,23 +22,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .login-logo {
-    position: relative;
-    top: 80px;
-    left: 77px;
+    padding-top: 80px;
+    padding-left: 77px;
     width: 100px;
     height: auto;
 }
 
 .login-header {
-    position: relative;
-    top: 67px;
-    right: 122px;
+    padding-top: 67px;
+    padding-right: 122px;
     display: flex;
     align-items: center;
     gap: 35px;
+    height: 50px;
 }
 
 .login-header-text {
@@ -71,7 +70,7 @@
     padding: 48px clamp(16px, -132.5px + 24.75vw, 115px);
     width: 100%;
     max-width: 652px;
-    margin: calc(50vh - 240px) 16px 16px 16px;
+    margin: 16px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -201,10 +200,10 @@
 
 .login-footer {
     width: 100%;
+    max-width: 1440px;
     display: flex;
     justify-content: center;
     gap: 32px;
-    margin-top: auto;
     padding-bottom: 32px;
 }
 
@@ -218,6 +217,12 @@
 
 .login-footer a:hover {
     color: #29ABE2;
+}
+
+.sticky-bottom {
+  position: sticky;
+  bottom: 0;
+  z-index: 10;
 }
 
 .login-button {
