--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -115,25 +115,25 @@
 }
 
 .input-wrapper {
-    position: relative;
     width: 100%;
-    margin-left: -12px;
-    padding: 0 4px;
-
+    display: flex;
+    align-items: center;
+    height: 48px;
+    border: 1px solid #D1D1D1;
+    border-radius: 10px;
+    padding: 0 21px;
 }
 
 .login-input {
     width: 100%;
     height: 40px;
-    padding: 4px 0 4px 21px;
-    border: 1px solid #D1D1D1;
-    border-radius: 10px;
     font-family: Inter, sans-serif;
     font-size: 20px;
     font-weight: 400;
     color: #000000;
     background-color: #FFFFFF;
     transition: border-color 0.3s ease;
+    border: none;
 }
 
 .login-input:focus {
@@ -146,10 +146,6 @@
 }
 
 .input-icon {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
     width: 20px;
     height: 20px;
     pointer-events: none;
