--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -68,8 +68,8 @@
     border-radius: 30px;
     box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
     padding: 48px clamp(16px, -132.5px + 24.75vw, 115px);
-    width: 100%;
-    max-width: 652px;
+    width: calc(100% - 64px);
+    max-width: 422px;
     margin: 16px;
     display: flex;
     flex-direction: column;
@@ -99,7 +99,6 @@
 
 .login-form {
     width: 100%;
-    max-width: 432px;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
@@ -115,7 +114,7 @@
 }
 
 .input-wrapper {
-    width: 100%;
+    width: calc(100% - 42px);
     display: flex;
     align-items: center;
     height: 48px;
